--- a/Frontends/UdemyCarBook.WebUI/UdemyCarBook.WebUI.csproj
+++ b/Frontends/UdemyCarBook.WebUI/UdemyCarBook.WebUI.csproj
@@ -30,4 +30,9 @@
     <ProjectReference Include="..\UdemyCarBook.DTOs\UdemyCarBook.DTOs.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Areas\Admin\Data\" />
+    <Folder Include="Areas\Admin\Models\" />
+  </ItemGroup>
+
 </Project>
